# cuben

./: .gitignore  .sconsign.dblite  Alfg.cpp  Base.cpp  Bbs.cpp  BezierSpline.cpp  BlackScholes.cpp  Brownian.cpp  BrownianBridge.cpp  Bvp.cpp  CMakeLists.txt  Compress.cpp  Cuben.h  CubicSpline.cpp  DiffInt.cpp  Halton.cpp  JpgEncoder.cpp  LICENSE  Lcg.cpp  LeastSq.cpp  MTwist.cpp  MinStd.cpp  Mlfg.cpp  Norm.cpp  Ode.cpp  Prng.cpp  ProjectHome.md  README.md  RandomEscape.cpp  RandomWalk.cpp  Randu.cpp  SConstruct  Trig.cpp  build.bat  bvp.cpp  clean.bat  compress.cpp  constants.cpp  constants.hpp  cuben.hpp  (+21 more)
doc/: outline.txt
inc/: Cuben.h
old/: Equations.cpp  Fund.cpp  Interp.cpp  Pde.cpp  Rand.cpp  Systems.cpp  exceptions.cpp
src/: Base.cpp  Bvp.cpp  Compress.cpp  DiffInt.cpp  Equations.cpp  Fund.cpp  Interp.cpp  LeastSq.cpp  Ode.cpp  Pde.cpp  Rand.cpp  Systems.cpp  Trig.cpp
test/: test_diffint.cpp  test_fund.cpp  test_interp.cpp
tests/: test_Alfg.cpp  test_Bbs.cpp  test_BezierSpline.cpp  test_BlackScholes.cpp  test_Brownian.cpp  test_BrownianBridge.cpp  test_CubicSpline.cpp  test_Halton.cpp  test_JpgEncoder.cpp  test_Lcg.cpp  test_MTwist.cpp  test_MinStd.cpp  test_Mlfg.cpp  test_Norm.cpp  test_Prng.cpp  test_RandomEscape.cpp  test_RandomWalk.cpp  test_Randu.cpp  test_bvp.cpp  test_compress.cpp  test_constants.cpp  test_diffint.cpp  test_equations.cpp  test_exceptions.cpp  test_fundamentals.cpp  test_interp.cpp  test_leastsq.cpp  test_ode.cpp  test_pde.cpp  test_polynomial.cpp  test_rand.cpp  test_systems.cpp  test_trig.cpp
